@@ -7,6 +7,7 @@
  - Fix for bug 29654: Added null guard when accessing possibly absent service
  - Fix for bug 29660: Handle OXException's that do not have a category assigned
  - Fix for bug 29666: User proper default charset when URL-encoding publication's site name
+ - Fix for bug 29656: Check for possibly absent count Integer instance
 
 * 2013-11-04 - jan.bauerdick@open-xchange.com
 
